--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,6 @@
 <body>
 <header>Школа <a href="http://javaops.ru" target="_blank">Java Open Projects</a></header>
 <h1>Курс JavaSE + Web</h1>
-<header>Школа <a href="http://javaops.ru" target="_blank">Java Open Projects</a></header>
+<footer>Школа <a href="http://javaops.ru" target="_blank">Java Open Projects</a></footer>
 </body>
 </html>
