--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=resume"/>
     <link rel="stylesheet" href="css/style.css">
     <title>Курс Java SE + Web.</title>
 </head>
 <body>
 <header>Школа <a href="http://javaops.ru" target="_blank">Java Open Projects</a></header>
 <h1>Курс JavaSE + Web</h1>
+<p><a href="resume">Resume List</a></p>
 <footer>Школа <a href="http://javaops.ru" target="_blank">Java Open Projects</a></footer>
 </body>
 </html>
